staging/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollouts-demo-staging
  namespace: rollouts-demo
  labels:
    app.kubernetes.io/instance: rollouts-demo-staging
    app.kubernetes.io/version: 76e8ed9901d99aad490a37e4018b549d17c98d5e
spec:
  replicas: 2
  strategy:
    canary:
      canaryService: rollouts-demo-staging-canary-service # our created canary service
      stableService: rollouts-demo-staging-stable-service # our created stable service
      dynamicStableScale: true # dynamically scale down the old versions
      trafficRouting:
        plugins:
          argoproj-labs/gatewayAPI:
            httpRoute: rollouts-demo-staging-https-route # our created httproute
            namespace: rollouts-demo
      steps:
      # 0) Increase the ratio of canary ReplicaSet to 50%
      - setWeight: 50
      # 1) Run integration test on the canary service
      - analysis:
          templates:
          - templateName: integration-test
          args:
          - name: service-name
            value: rollouts-demo-staging-canary-service
      # 2) Pause 1m after integation test
      - pause:
          duration: 1m
      # 3) Increase the ratio of canary ReplicaSet to 100%
      - setWeight: 100
      # 4) Pause for 1m after full scale up
      - pause:
          duration: 1m
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: rollouts-demo-staging
  template:
    metadata:
      labels:
        app: rollouts-demo-staging
    spec:
      containers:
        - name: rollouts-demo
          image: osoriano/rollouts-demo:76e8ed9901d99aad490a37e4018b549d17c98d5e
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: 32Mi
              cpu: 5m
