staging/https-route-staging.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  namespace: jettisonproj
  name: rollouts-demo-staging-https-route
spec:
  parentRefs:
  - name: default-gateway
    namespace: default
    sectionName: rollouts-demo-staging-osoriano-gw
  hostnames:
  - rollouts-demo-staging.osoriano.com
  rules:
  - backendRefs:
    - name: rollouts-demo-staging-stable-service
      kind: Service
      port: 80
    - name: rollouts-demo-staging-canary-service
      kind: Service
      port: 80
